--- a/OzricUI/Components/GraphNodeComponent.razor
+++ b/OzricUI/Components/GraphNodeComponent.razor
@@ -1,12 +1,12 @@
 @using Blazor.Diagrams.Components.Renderers;
 @using OzricUI.Model
 
-<div class="ozric-node @(Node.Selected ? " selected" : "")">
+<div class="ozric-node @(Node.Selected ? " selected" : "") ozric-height-@(Node.PortHeight())">
     <div class="ozric-node-icon"><span class="iconify" data-icon="@(Node.Icon)"></span></div>
     <div class="ozric-node-title">@(Node.Title)</div>
     @foreach (var port in Node.Ports.Select(p => p as IPort).Where(p => p != null))
     {
-        <div class="@(port.cssClass)" hidden="@(port.hiddenIfLocked && Node.Locked)">
+        <div class="@(port.CssClass) port-@(Node.GetPortPosition(port))" hidden="@(port.HiddenIfLocked && Node.Locked)">
             <PortRenderer Port="@((PortModel) port)">
                 <img src="icons/@(port.valueType).png" width="16" height="16" />
             </PortRenderer>
