Got ModeMatchDialog working

--- a/OzricUI/Components/GraphEditor.razor
+++ b/OzricUI/Components/GraphEditor.razor
@@ -149,7 +149,7 @@
             node.Refresh();
         }
 
-        foreach (var link in diagram.Nodes)
+        foreach (var link in diagram.Links)
             link.Locked = locked;
     }
 
