--- a/OzricUI/Components/AddNodesDialog.razor
+++ b/OzricUI/Components/AddNodesDialog.razor
@@ -13,6 +13,7 @@
         <MudChip Text="Media Players" Value="Category.MediaPlayer"  />
         <MudChip Text="Logic" Value="Category.Logic" />
         <MudChip Text="Constant" Value="Category.Constant" />
+        <MudChip Text="People" Value="Category.Person" />
 
     </MudChipSet>
 
