--- a/OzricUI/Shared/MainLayout.razor
+++ b/OzricUI/Shared/MainLayout.razor
@@ -8,6 +8,7 @@
 @using Edge = MudBlazor.Edge
 @using Blazor.Diagrams.Core.Models.Base
 @using OzricEngine.Values
+@using ValueType = OzricEngine.Values.ValueType
 @inject IDialogService DialogService
 @inherits LayoutComponentBase
 @inject DataService Data
@@ -134,7 +135,7 @@
 
     private async Task LoadGraph()
     {
-        Graph = EngineService.Graph;
+        Graph = Json.Clone(EngineService.Graph);    // Don't edit the live graph!
         GraphLayout = await Data.GetGraphLayoutAsync();
         GraphEditState.OnChanged += OnGraphEditStateChanged;
         GraphEditState.OnSelectionChanged += GraphSelectionChanged;
@@ -248,6 +249,13 @@
             name: "If All - AND",
             icon: IfAllModel.ICON,
             create: () => new IfAny(Graph.CreateNodeID("ifall-")),
+            once: false));
+
+        choices.Add(new AddNodeChoice(
+            category: Category.Logic,
+            name: "Binary Choice - Color",
+            icon: BinaryChoiceModel.ICON,
+            create: () => new BinaryChoice(Graph.CreateNodeID("color-choice-"), ValueType.Color),
             once: false));
 
         choices.Add(new AddNodeChoice(
