--- a/OzricUI/Components/GraphNodeComponent.razor
+++ b/OzricUI/Components/GraphNodeComponent.razor
@@ -22,6 +22,7 @@
                         {
                             case ValueType.Scalar:
                                 break;
+                                
                             case ValueType.Boolean:
                                 var pinValue = ((Boolean)pin.value);
                                 if (pinValue.value)
@@ -33,6 +34,7 @@
                                     <img src="icons/Binary-false.png" width="16" height="16"/>
                                 }
                                 break;
+                                
                             case ValueType.Color:
                                 var color = ((ColorValue)pin.value);
                                 if (color.brightness == 0)
@@ -44,7 +46,9 @@
                                     <div style="background: #@(color.ToHexString()); width:16px; height:16px; border-radius: 50%">&nbsp;</div>
                                 }
                                 break;
+                                
                             case ValueType.Mode:
+                    <img src="icons/@(port.valueType).png" width="16" height="16"/>
                                 break;
                             default:
                                 throw new ArgumentOutOfRangeException();
