--- a/OzricUI/Components/EntityDialog.razor
+++ b/OzricUI/Components/EntityDialog.razor
@@ -40,6 +40,9 @@
     [Parameter]
     public EntityNode Node { get; set; }
 
+    [Parameter]
+    public IEngineService Engine { get; set; }
+    
     private string ID { get; set; }
     private NodeType Type;
     private string EntityID;
