--- a/OzricUI/Components/LightDialog.razor
+++ b/OzricUI/Components/LightDialog.razor
@@ -50,6 +50,9 @@
     [Parameter]
     public Light Node { get; set; }
 
+    [Parameter]
+    public IEngineService Engine { get; set; }
+    
     private string ID;
     private string EntityID;
     private Light.ColourSwitchMode ColourSwitchMode;
