--- a/OzricUI/Components/NodeDialog.razor
+++ b/OzricUI/Components/NodeDialog.razor
@@ -1,5 +1,6 @@
 @using OzricUI.Model
 @using OzricEngine.Nodes
+@using OzricService
 
 <MudDialog>
     <DialogContent>
@@ -34,6 +35,9 @@
     [Parameter]
     public Node Node { get; set; }
 
+    [Parameter]
+    public IEngineService Engine { get; set; }
+    
     private string ID { get; set; }
     private NodeType Type;
 
